# Nairal

./: CMakeLists.txt  README.md
Nairal/: CMakeLists.txt  GameState.cpp  GameState.h  GameStateManager.h  Nairal.cpp  Nairal.h  main.cpp
Nairal/data/src/: dump.cpp  main.cpp
Nairal/data/src/Components/: Collider.h  Component.h  Lifetime.h  Obstacle.h  Physics.h  Player.h  Renderable.h
Nairal/data/src/Core/: ComponentManager.h  EntityManager.cpp  EntityManager.h  SoundManager.cpp  SoundManager.h  SystemManager.h  TextureManager.cpp  TextureManager.h  Types.h  World.cpp  World.h
Nairal/data/src/Game/: Game.cpp  Game.h  StateManager.cpp  StateManager.h
Nairal/data/src/Systems/: AnimationSystem.cpp  AnimationSystem.h  ColliderSystem.cpp  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  LifetimeSystem.cpp  LifetimeSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
